# portfolio

./: .gitignore  OPTIMIZATIONS_APPLIED.md  PERFORMANCE_ANALYSIS.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: index.md  robots.txt  work.md
docs/blog/: index.md
docs/blog/posts/: claude-code-data-engineering.md
docs/javascripts/: background-logo.js  carousel.js  image-placeholder.js  mermaid-config.js  timeline.js
docs/stylesheets/: README.md  background-logo.css  bundle.css  components.css  extra.css  global.css  home.css  page-home.css  page-work.css  theme.css  timeline.css
scripts/: build-css.sh
snippets/: abbreviations.md
templates/: main.html  work.html
