[project]
name = "portfolio"
version = "0.1.0"
description = "Personal portfolio site built with MkDocs Material"
authors = [
    {name = "Vinicius C. Amorim", email = "vamorim.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-roamlinks-plugin>=0.3.0",
    "mkdocs-glightbox>=0.3.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-panzoom-plugin>=0.1.0",
]

[dependency-groups]
dev = []
