[project]
name = "portfolio"
version = "0.1.0"
description = "Personal portfolio site built with MkDocs Material"
authors = [
    {name = "Vinicius C. Amorim", email = "vamorim.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-glightbox>=0.3.0",
    "mkdocs-panzoom-plugin>=0.1.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.0",
]

[dependency-groups]
dev = []
